Improve calculations using milliseconds instead of seconds to be more accurate

--- a/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
+++ b/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
@@ -42,7 +42,7 @@
                 @Html.Label(Resources.Label_FinishTime)
             </td>
             <td class="col-md-1">
-                @finishTime
+                @finishTime.ToString(@"hh\:mm\:ss")
             </td>
         </tr>
     </tfoot>
