--- a/trunk/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
+++ b/trunk/SmartMarathon.App/Views/Shared/EditorTemplates/Splits.cshtml
@@ -42,7 +42,7 @@
                 @Html.Label(Resources.Label_FinishTime)
             </td>
             <td class="col-md-1">
-                @finishTime
+                @finishTime.ToString(@"hh\:mm\:ss")
             </td>
         </tr>
     </tfoot>
