--- a/SmartMarathon.App/Content/main.css
+++ b/SmartMarathon.App/Content/main.css
@@ -13,7 +13,6 @@ body {
     font-weight: 300;
     font-size: 16px;
     color: #555;
-
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
 }
@@ -40,7 +39,6 @@ p {
 a {
     color: #FFFF58;
     word-wrap: break-word;
-
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
     -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
     -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -48,23 +46,23 @@ a {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
-a:hover,
-a:focus {
-    color: #7b7b7b;
-    text-decoration: none;
-    outline: 0;
-}
+    a:hover,
+    a:focus {
+        color: #7b7b7b;
+        text-decoration: none;
+        outline: 0;
+    }
 
-a:before,
-a:after {
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
-}
+    a:before,
+    a:after {
+        -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+        -o-transition: color 0.1s ease-in, background 0.1s ease-in;
+        transition: color 0.1s ease-in, background 0.1s ease-in;
+    }
 
- hr {
+hr {
     display: block;
     height: 1px;
     border: 0;
@@ -79,244 +77,242 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(images/header-bg.jpg) no-repeat center top;
-	margin-top: -10px;
-	padding-top:20px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 700px;
-	width: 100%;
-	
+    background: url(images/header-bg.jpg) no-repeat center top;
+    margin-top: -10px;
+    padding-top: 20px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 700px;
+    width: 100%;
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
     background-size: 100%;
-
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
-#headerwrap h1 {
-	margin-top: 80px;
-	color: white;
-	font-size: 70px;
-	font-weight: 700;
-}
+    #headerwrap h1 {
+        margin-top: 80px;
+        color: white;
+        font-size: 70px;
+        font-weight: 700;
+    }
 
-#headerwrap h3 {
-	color: white;
-	font-size: 30px;
-	font-weight: 100;
-    font-family: 'EB Garamond', serif;
-    font-style: oblique;
-}
+    #headerwrap h3 {
+        color: white;
+        font-size: 30px;
+        font-weight: 100;
+        font-family: 'EB Garamond', serif;
+        font-style: oblique;
+    }
 
-#headerwrap .logo {
-	text-align: right;
-	margin-left: 20px;
-	margin-top: 0px;
-}
+    #headerwrap .logo {
+        text-align: right;
+        margin-left: 20px;
+        margin-top: 0px;
+    }
 
 
 /* Footer Wrap */
 
 #f {
-	background: #1a1a1a;
-	padding-top: 70px;
-	padding-bottom: 70px;
-	text-align: center
+    background: #1a1a1a;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    text-align: center;
 }
 
-#f h3 {
-	color: white;
-	font-size: 28px;
-	font-weight: 700;
-	letter-spacing: 1px;	
-}
+    #f h3 {
+        color: white;
+        font-size: 28px;
+        font-weight: 700;
+        letter-spacing: 1px;
+    }
 
-#f i {
-	font-size: 8px;
-	color: #fff;
-    padding: 3px;
-}
+    #f i {
+        font-size: 8px;
+        color: #fff;
+        padding: 3px;
+    }
 
-#f p {
-	font-size: 20px;
-	color: #f2f2f2;
-}
+    #f p {
+        font-size: 20px;
+        color: #f2f2f2;
+    }
 
-#f img {
-	text-align: center;
-}
+    #f img {
+        text-align: center;
+    }
 
 
 /* MENU CONF*/
 
 .menu {
-	position: fixed;
-	right: -200px;
-	width: 260px;
-	height: 100%;
-	top: 0;
-	z-index: 10;
-	text-align: left;
+    position: fixed;
+    right: -200px;
+    width: 260px;
+    height: 100%;
+    top: 0;
+    z-index: 10;
+    text-align: left;
 }
 
-.menu.menu-open {
-	right: 0px;
-}
+    .menu.menu-open {
+        right: 0px;
+    }
 
 .menu-wrap {
-	position: absolute;
-	top: 0;
-	left: 60px;
-	background: #1a1a1a;
-	width: 200px;
-	height: 100%;
+    position: absolute;
+    top: 0;
+    left: 60px;
+    background: #1a1a1a;
+    width: 200px;
+    height: 100%;
 }
 
 .menu h1.logo a {
-	font-family: 'Oswald', sans-serif;
-	font-size: 16px;
-	font-weight: 700;
-	letter-spacing: 0.15em;
-	line-height: 40px;
-	text-transform: uppercase;
-	color: #ffffff;
-	margin-top: 20px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.15em;
+    line-height: 40px;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-top: 20px;
 }
 
-.menu h1.logo a:hover {
-	color: #f85c37;
-}
+    .menu h1.logo a:hover {
+        color: #f85c37;
+    }
 
 .menu img.logo {
-	margin: 20px 0;
-	max-width: 160px;
+    margin: 20px 0;
+    max-width: 160px;
 }
 
 .menu a {
-	margin-left: 20px;
-	color: #808080;
-	display: block;
-	font-size: 12px;
-	font-weight: 700;
-	line-height: 40px;
-	letter-spacing: 0.1em;
-	text-transform: uppercase;
+    margin-left: 20px;
+    color: #808080;
+    display: block;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
 }
 
-.menu a:hover {
-	color: #ffffff;
-}
+    .menu a:hover {
+        color: #ffffff;
+    }
 
-.menu a:active {
-	color: #ffffff;
-}
+    .menu a:active {
+        color: #ffffff;
+    }
 
-.menu a > i {
-	float: left;
-	display: inline-block;
-	vertical-align: middle; 
-	text-align: left;
-	width: 25px;
-	font-size: 14px;
-	line-height: 40px;
-	margin: 25px 2px;
-}
+    .menu a > i {
+        float: left;
+        display: inline-block;
+        vertical-align: middle;
+        text-align: left;
+        width: 25px;
+        font-size: 14px;
+        line-height: 40px;
+        margin: 25px 2px;
+    }
 
 .menu-close {
-	cursor: pointer;
-	display: block;
-	position: absolute;
-	font-size: 14px;
-	color: #808080;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	top: 20px;
-	right: 5px;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    font-size: 14px;
+    color: #808080;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    top: 20px;
+    right: 5px;
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
 }
 
-.menu-close:hover {
-	color: #ffffff;
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
+    .menu-close:hover {
+        color: #ffffff;
+        -webkit-transition: all .1s ease-in-out;
+        -moz-transition: all .1s ease-in-out;
+        -ms-transition: all .1s ease-in-out;
+        -o-transition: all .1s ease-in-out;
+        transition: all .1s ease-in-out;
+    }
 
 /* Push the body after clicking the menu button */
 .body-push {
-	overflow-x: hidden;
-	position: relative;
-	left: 0;
+    overflow-x: hidden;
+    position: relative;
+    left: 0;
 }
 
 .body-push-toright {
-	left: 200px;
+    left: 200px;
 }
 
 .body-push-toleft {
-	left: -200px;
+    left: -200px;
 }
 
 .menu,
 .body-push {
-	-webkit-transition: all .3s ease;
-	   -moz-transition: all .3s ease;
-		-ms-transition: all .3s ease;
-		 -o-transition: all .3s ease;
-			transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
 }
 
 #menuToggle {
-	position: absolute;
-	top: 20px;
-	left: 0;
-	z-index: 11;
-	display: block;
-	text-align: center;
-	font-size: 14px;
-	color: #ffffff;
-	width: 40px;
-	height: 40px;
-	line-height: 40px;
-	cursor: pointer;
-	background: rgba(0,0,0,0.25);
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    z-index: 11;
+    display: block;
+    text-align: center;
+    font-size: 14px;
+    color: #ffffff;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    background: rgba(0,0,0,0.25);
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
 }
 
-#menuToggle:hover {
-	color: #ffffff;
-	background: rgba(0,0,0,0.2);
-	-webkit-transition: all .1s ease-in-out;
-	   -moz-transition: all .1s ease-in-out;
-		-ms-transition: all .1s ease-in-out;
-		 -o-transition: all .1s ease-in-out;
-			transition: all .1s ease-in-out;
-}
+    #menuToggle:hover {
+        color: #ffffff;
+        background: rgba(0,0,0,0.2);
+        -webkit-transition: all .1s ease-in-out;
+        -moz-transition: all .1s ease-in-out;
+        -ms-transition: all .1s ease-in-out;
+        -o-transition: all .1s ease-in-out;
+        transition: all .1s ease-in-out;
+    }
 
 
-.input-disable{
+.input-disable {
     background-color: transparent;
     border: none;
     outline: none;
     cursor: default;
-    width: 60px;  
+    width: 60px;
 }
 
 .table, label, h4 {
@@ -337,7 +333,7 @@ a:after {
     font-size: 22px;
 }
 
-.table > tfoot> tr > td {
+.table > tfoot > tr > td {
     font-size: 22px;
 }
 
@@ -365,11 +361,11 @@ a:after {
 }
 
 @media (max-device-width: 640px) {
-    .table > tbody> tr > td {
+    .table > tbody > tr > td {
         font-size: 24px;
     }
 
-    .table > tfoot> tr > td {
+    .table > tfoot > tr > td {
         font-size: 26px;
     }
 
@@ -379,19 +375,19 @@ a:after {
 }
 
 @media (max-width : 320px) {
-    .table > thead> tr > th {
+    .table > thead > tr > th {
         font-size: 18px;
         padding-left: 0;
         padding-right: 0;
     }
 
-    .table > tbody> tr > td {
+    .table > tbody > tr > td {
         font-size: 22px;
         padding-left: 0;
         padding-right: 0;
     }
 
-    .table > tfoot> tr > td {
+    .table > tfoot > tr > td {
         font-size: 24px;
     }
 
@@ -399,4 +395,22 @@ a:after {
         font-size: 15px;
         padding-left: 2px;
     }
+}
+
+.calculator {
+    padding-top: 10px;
+    text-align: center;
+}
+
+.poweredBy {    
+    font-weight: 500;
+    color: gray;
+}
+
+.poweredBySM {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    color: white;
+    margin-left: 5px;
 }
