--- a/SmartMarathon.IonicApp/www/templates/menu.html
+++ b/SmartMarathon.IonicApp/www/templates/menu.html
@@ -1,36 +1,41 @@
-<ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-
-      <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-      </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
-
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
-    </ion-header-bar>
-    <ion-content>
-      <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
+<ion-side-menus enable-menu-with-back-views="false" >
+    <ion-side-menu-content >
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button>
+            </ion-nav-back-button>
+            <ion-nav-buttons side="left">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+            </ion-nav-buttons>
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
+    <ion-side-menu side="left" id="menuContent" style="background-color:#00582A;">
+        <ion-header-bar class="bar-stable">
+            <!--<div class="title">Menu</div>-->
+        </ion-header-bar>
+        <ion-content padding="false" class="side-menu-left has-header">
+            <ion-list id="menu-null" class=" " style="background-color:#FF5113;">
+                <ion-item class="item-icon-right color-orange" id="menu-list-item1" ui-sref="app.smartMarathon" menu-close="">
+                    Smart Marathon
+                    <span class="item-note color-green">Race strategy calculator</span>
+                    <i class="icon ion-calculator"></i>
+                </ion-item>
+                <ion-item class="item-icon-right color-orange" id="menu-list-item2" ui-sref="app.gSSI" menu-close="">
+                    GSSI
+                    <span class="item-note color-green">Nutrition calculator</span>
+                    <i class="icon ion-flash"></i>
+                </ion-item>
+                <ion-item class="item-icon-right color-orange" id="menu-list-item3" ui-sref="app.about" menu-close="">
+                    About Smart Marathon
+                    <span class="item-note color-green">Theory explanation</span>
+                    <i class="icon ion-document-text"></i>
+                </ion-item>
+                <ion-item class="item-icon-right color-orange" id="menu-list-item4" ui-sref="app.contact" menu-close="">
+                    Contact
+                    <i class="icon ion-email"></i>
+                </ion-item>
+                <ion-toggle toggle-class="toggle-balanced" ng-checked="true" id="menu-toggle1" class="color-orange">Metric</ion-toggle>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
 </ion-side-menus>
