--- a/SmartMarathon.IonicApp/www/templates/smartMarathon.html
+++ b/SmartMarathon.IonicApp/www/templates/smartMarathon.html
@@ -1,116 +1,132 @@
+<script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
+<link href="lib/ion-datetime-picker/release/ion-datetime-picker.min.css" rel="stylesheet">
+
 <ion-view title="Smart Marathon" id="smartMarathon" class="bgcolor-green">
-    <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header">
-        <div>
-            <div class="row">
-                <div class="col col-25">
+    <ion-content padding="true" style="background: url(img/bg-box.png) no-repeat center;background-size:cover;" class="has-header">        
+        <div class="list ">
+            <!--<div class="row item">
+                <div class="col col-35">
                     <span class="input-label">GOAL TIME</span>
                 </div>
                 <div class="col col-20">
-                    <label class="item item-select" id="goal-time-hours">
-                        <select>
-                            <option>00</option>
-                            <option>01</option>
-                            <option>02</option>
-                            <option>03</option>
-                            <option>04</option>
-                            <option>05</option>
-                        </select>
-                    </label>
+                    <select ng-model="model.GoalTime.Hours" ng-change="calculateGoalTimeAndAvgPaces(true)">
+                        <option selected="selected">00</option>
+                        <option>01</option>
+                        <option>02</option>
+                        <option>03</option>
+                        <option>04</option>
+                        <option>05</option>
+                    </select>
                 </div>
                 <div class="col col-5">
                     :
                 </div>
-                <div class="col col-20">
-                    <label class="item item-select" id="goal-time-minutes">
-                        <select>
-                            <option>00</option>
-                            <option>01</option>
-                            <option>02</option>
-                            <option>03</option>
-                            <option>04</option>
-                            <option>05</option>
-                        </select>
-                    </label>
+                <div class="col col-15">
+                    <select ng-model="model.GoalTime.Minutes" ng-change="calculateGoalTimeAndAvgPaces(true)">
+                        <option selected="selected">00</option>
+                        <option>01</option>
+                        <option>02</option>
+                        <option>03</option>
+                        <option>04</option>
+                        <option>05</option>
+                    </select>
                 </div>
                 <div class="col col-5">
                     :
                 </div>
-                <div class="col col-20">
-                    <label class="item item-select" id="goal-time-seconds">
-                        <select>
-                            <option>00</option>
-                            <option>01</option>
-                            <option>02</option>
-                            <option>03</option>
-                            <option>04</option>
-                            <option>05</option>
-                        </select>
-                    </label>
+                <div class="col col-15">
+                    <select ng-model="model.GoalTime.Seconds" ng-change="calculateGoalTimeAndAvgPaces(true)">
+                        <option selected="selected">00</option>
+                        <option>01</option>
+                        <option>02</option>
+                        <option>03</option>
+                        <option>04</option>
+                        <option>05</option>
+                    </select>
+                </div>
+            </div>-->
+            <div class="row item">
+                <div class="col col-33">
+                    <span class="input-label">GOAL TIME</span>
+                </div>
+                <div class="col">
+                    <input type="number" min="0" max="23" ng-model="model.GoalTime.Hours" ng-change="calculateGoalTimeAndAvgPaces(true)" class="input-number"/>
+                </div>
+                <div class="col">
+                    <span class="input-label">:</span>
+                </div>
+                <div class="col">
+                    <input type="number" min="0" max="59" ng-model="model.GoalTime.Minutes" ng-change="calculateGoalTimeAndAvgPaces(true)" class="input-number"/>
+                </div>
+                <div class="col">
+                    <span class="input-label">:</span>
+                </div>
+                <div class="col">
+                    <input type="number" min="0" max="59" ng-model="model.GoalTime.Seconds" ng-change="calculateGoalTimeAndAvgPaces(true)" class="input-number"/>
                 </div>
             </div>
-        </div>
-        <div>
-            <div class="row">
-                <div class="col col-25">
-                    GOAL PACE
+            <!--<div class="row item">
+                <div class="col col-45">
+                    <span class="input-label">GOAL PACE</span>
                 </div>
-                <div class="col col-20">
-                    <label class="item item-select" id="goal-pace-minutes">
-                        <select>
-                            <option>00</option>
-                            <option>01</option>
-                            <option>02</option>
-                            <option>03</option>
-                            <option>04</option>
-                            <option>05</option>
-                        </select>
-                    </label>
+                <div class="col col-15">
+                    <select ng-model="model.PaceByKm.Minutes" ng-change="calculateGoalTimeAndAvgPaces(false)">
+                        <option selected="selected">00</option>
+                        <option>01</option>
+                        <option>02</option>
+                        <option>03</option>
+                        <option>04</option>
+                        <option>05</option>
+                    </select>
                 </div>
                 <div class="col col-5">
                     :
                 </div>
-                <div class="col col-20">
-                    <label class="item item-select" id="goal-pace-seconds">
-                        <select>
-                            <option>00</option>
-                            <option>01</option>
-                            <option>02</option>
-                            <option>03</option>
-                            <option>04</option>
-                            <option>05</option>
-                        </select>
-                    </label>
+                <div class="col col-15">
+                    <select ng-model="model.PaceByKm.Seconds" ng-change="calculateGoalTimeAndAvgPaces(false)">
+                        <option selected="selected">00</option>
+                        <option>01</option>
+                        <option>02</option>
+                        <option>03</option>
+                        <option>04</option>
+                        <option>05</option>
+                    </select>
                 </div>
-                <div class="col col-30">
+                <div class="col col-20">
                     min/km
                 </div>
+            </div>-->
+            <div class="row item">
+                <div class="col col-33">
+                    <span class="input-label">GOAL PACE</span>
+                </div>
+                <div class="col">
+                    <input type="number" min="0" max="59" ng-model="model.PaceByKm.Minutes" ng-change="calculateGoalTimeAndAvgPaces(false)" class="input-number"/>
+                </div>
+                <div class="col">
+                    <span class="input-label">:</span>
+                </div>
+                <div class="col">
+                    <input type="number" min="0" max="59" ng-model="model.PaceByKm.Seconds" ng-change="calculateGoalTimeAndAvgPaces(false)" class="input-number"/>
+                </div>
+                <div class="col">
+                    <span class="input-label">min/km</span>
+                </div>
             </div>
-        </div>
-        <form id="smartMarathon-form2" class="list ">
-            <label class="item item-select " id="smartMarathon-select3">
+            
+            <label class="item item-input item-select">
                 <span class="input-label">DISTANCE</span>
-                <select>
-                    <option>Marathon</option>
-                    <option>30K</option>
-                    <option>Half Marathon</option>
-                    <option>10K</option>
-                    <option>5K</option>
-                    <option>Other</option>
-                </select>
+                <select ng-model="model.Distance" ng-options="y.Title for (x, y) in data.Distances" ng-change="loadEvents()"></select>
             </label>
-            <label class="item item-input " id="smartMarathon-input1">
+            <label class="item item-input" ng-show="isCustomDistance()">
                 <span class="input-label">YOUR DISTANCE</span>
                 <input type="number" placeholder="">
             </label>
-            <label class="item item-select " id="smartMarathon-select4">
+            <label class="item item-input item-select" ng-hide="isCustomDistance()">
                 <span class="input-label">EVENT</span>
-                <select>
-                    <option>EVENT 1</option>
-                    <option>EVENT 2</option>
-                    <option>EVENT 3</option>
-                </select>
+                <select ng-model="model.Event" ng-options="y.Text for (x, y) in data.Events"></select>
             </label>
-        </form>
+        </div>
         <div>
             <div class="row">
                 <div class="col col-20">
